--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -14,6 +15,21 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+    <h1>Kory Hacker</h1>
+
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+  <div class="title-img">
+    <img src="images/prof-photo.jpg" alt="A front facing photo of the world's most handsome man.">
+    <p>Persistence is key in my book. Whenever I am tasked with a project, I try every possible solution I have at my disposal until the problem is solved, or I tap into my colleagues talent to help me find the answer I need.</p>
+  </div>
+  
 </body>
+
 </html>
