--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
     <img src="images/prof-photo.jpg" alt="A front facing photo of the world's most handsome man.">
     <p>Persistence is key in my book. Whenever I am tasked with a project, I try every possible solution I have at my disposal until the problem is solved, or I tap into my colleagues talent to help me find the answer I need.</p>
   </div>
-  
+  <div class="middle-section">
+  <section class="about-me">
+    <h2>About Me</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </section>
+  <section class="my-skills">
+    <h2>My Skills</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </section>
+  </div>
 </body>
 
 </html>
