Edited the work history section

--- a/index.html
+++ b/index.html
@@ -20,25 +20,69 @@
 
     <nav>
       <a href="#">Home</a>
-      <a href="#">About</a>
+      <a href="#about-me-link">About</a>
       <a href="#">Portfolio</a>
       <a href="#">Contact</a>
     </nav>
   </header>
   <div class="title-img">
     <img src="images/prof-photo.jpg" alt="A front facing photo of the world's most handsome man.">
-    <p>Persistence is key in my book. Whenever I am tasked with a project, I try every possible solution I have at my disposal until the problem is solved, or I tap into my colleagues talent to help me find the answer I need.</p>
+    <p><br>Hello! My name is Kory Hacker, and I am a student of Lambda School.<br><br> Currently a student of the
+      Full-Stack Web Development course.</p>
   </div>
   <div class="middle-section">
-  <section class="about-me">
-    <h2>About Me</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
-  <section class="my-skills">
-    <h2>My Skills</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
+    <section class="about-me">
+      <h2 id="about-me-link">About Me</h2>
+      <p>I was born and raised in the wonderfully cozy state of Kentucky. I've spent my time here nestled in a small
+        town called Simpsonville, and it has afforded me the pleasures of country and city life.
+        Early in my life, i've always been fascinated with computers. In fact, I learned how to type before I learned
+        how to read, because I was able to memorize which order to press keys on my keyboard. It's that early start and
+        fascination that eventually led me down a path of interest in computer science.
+      </p>
+    </section>
+    <section class="my-skills">
+      <h2>My Skills</h2>
+      <p>Creative</p>
+      <p>Collaborator</p>
+      <p>Team Player</p>
+      <p>Planner</p>
+      <p>Initiator</p>
+    </section>
   </div>
+
+  <section class="work-history">
+    <h2>Where I've Worked</h2>
+    <div class="places-worked">
+      <div id="pretzel">
+        <h3>Auntie Anne's</h3>
+        <img src="images/pretzel.jpg">
+      </div>
+      <div id="waiter">
+        <h3>Bob Evan's</h3>
+        <img src="images/waiter.jpg">
+      </div>
+      <div id="burger">
+        <h3>Mcdonald's</h3>
+        <img src="images/burger.jpg">
+      </div>
+      <div id="shoes">
+        <h3>Adidas</h3>
+        <img src="images/shoes.jpg">
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="contact">
+      <h2>CONTACT</h2>
+      <h3>Phone</h3>
+      <P>(123)456-7890</P>
+      <h3>Email</h3>
+      <p>bazinga617@zmail.com</p>
+      <h3>Address</h3>
+      <p>123 street, someplace kentucky</p>
+    </div>
+  </footer>
 </body>
 
 </html>
